--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,8 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #FBFBFE;
+		color: #2A2A2A;
 	}
 	code {
 		font-family:
