fix: ts file for icons export

--- a/src/pages/Home/AboutMe.astro
+++ b/src/pages/Home/AboutMe.astro
@@ -1,7 +1,6 @@
 ---
 import {Brush, Music, ChefHat, Cat, Gamepad, Book} from "lucide-astro";
-import {icons} from "../../data/iconsImports.ts";
-import php from "../../assets/php-icon.png"
+import {icons} from "../../data/iconsImports";
 ---
 
 <div id="about-me" class="h-screen flex flex-row justify-center items-center">
