refactor: change view that already exists

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import {Linkedin} from "lucide-astro";
 import {Mail} from "lucide-astro";
 ---
 
-<div class="text-lg flex flex-row items-center justify-between w-full p-5 right-0 left-0 fixed">
+<div class="text-lg flex flex-row items-center justify-between w-full p-5 right-0 left-0">
     <h1>
         ITH Kagnana
     </h1>
