--- a/src/pages/Home/AboutMe.astro
+++ b/src/pages/Home/AboutMe.astro
@@ -1,81 +1,47 @@
 ---
-import {Brush, Music, ChefHat, Cat, Gamepad, Book} from "lucide-astro";
-import {icons} from "../../data/iconsImports";
+import ValueCard from "../../components/ValueCard.astro";
 ---
 
-<div id="about-me" class="h-screen flex flex-row justify-center items-center">
-    <div class="flex flex-row justify-center items-start gap-5 w-full">
-        <div class="w-1/3 flex gap-5 flex-col h-full">
-            <div class="border-[#B88DFF] border-2 rounded p-2 h-full">
-                <p class="text-lg pb-2">About me</p>
-
-                <p>Ambitious 21 years old, i have decided to take the path of an web/mobile app developer.
-                    I learned for the first time Python at highschool as an option. At 20 years old, i decided to work as an intern as a web developer.
-                    I made a web app with MERN stack and one year after, i have decided to take the opportunity to become an iOS developer @Wimova, my current company.</p>
-            </div>
-
-            <div class="flex flex-row gap-5 w-full">
-                <div class="border-[#B88DFF] border-2 rounded p-2 w-2/3">
-                    <p class="text-lg pb-2">Hobbies</p>
-
-                    <div class="flex flex-row justify-around">
-                        <Brush/>
-                        <Music/>
-                        <ChefHat/>
-                        <Cat/>
-                        <Gamepad/>
-                        <Book/>
-                    </div>
-                </div>
-
-                <div class="border-[#B88DFF] border-2 rounded p-2 w-1/3">
-                    <p class="text-center">2 years of experience in software engineering </p>
-                </div>
-            </div>
+<div id="about-me" class="h-screen flex flex-col justify-center items-center gap-5">
+    <div class="flex flex-col items-center text-center gap-5">
+        <div>
+            <img/>
+            <h1 class="title_about_me">WHO AM I ?</h1>
+            <img/>
         </div>
-
-        <div class="w-1/3 border-[#B88DFF] border-2 rounded flex-col flex p-2 h-full">
-            <p class="text-lg pb-2">Competences</p>
-            <div class="flex flex-col">
-                <p>Languages</p>
-
-                <div class="flex flex-row justify-around py-2">
-                    <img class="h-10" src={icons.javascript.src} alt="javascript icon"/>
-                    <img class="h-10" src={icons.typescript.src} alt="typescript icon"/>
-                    <img class="h-10" src={icons.php.src} alt="php icon"/>
-                    <img class="h-10" src={icons.cSharp.src} alt="csharp icon"/>
-                    <img class="h-10" src={icons.java.src} alt="java icon"/>
-                    <img class="h-10" src={icons.swift.src} alt="swift icon"/>
-                </div>
-            </div>
-
-            <div class="flex flex-col">
-                <p>Framework - Libraries</p>
-
-                <div class="flex flex-row justify-around py-2">
-                    <img class="h-10" src={icons.react.src} alt="react icon"/>
-                    <img class="h-10" src={icons.swiftUi.src} alt="swiftUI icon"/>
-                </div>
-            </div>
-
-            <div class="flex flex-col">
-                <p>SGBD</p>
-
-                <div class="flex flex-row justify-around py-2">
-                    <img class="h-10" src={icons.mongoDB.src} alt="mongo icon"/>
-                    <img class="h-10" src={icons.mySQL.src} alt="mySQL icon"/>
-                </div>
-            </div>
-
-            <div class="flex flex-col">
-                <p>Tools</p>
-
-                <div class="flex flex-row justify-around py-2">
-                    <img class="h-10" src={icons.git.src} alt="git icon"/>
-                    <img class="h-10" src={icons.docker.src} alt="docker icon"/>
-                    <img class="h-10" src={icons.azureDevops.src} alt="azureDevOps icon"/>
-                </div>
-            </div>
-        </div>
+    
+        <p class="w-2/3">
+            I am a passionate and ambitious young developer with a deep love for art and video games. 
+            Driven by a relentless curiosity and a thirst for knowledge. 
+            I aspire to collaborate with people from all over the world to create innovative applications that shape the future. 
+            Combining creativity, technical expertise, and a global mindset. 
+            I am eager to contribute to projects that push the boundaries of technology while reflecting the beauty of artistic expression and interactive design.
+        </p>
     </div>
+
+    <ValueCard />
+
+    <img class="w-full" src="src/assets/about_me/bottom_line.svg" />
 </div>
+
+<style>
+    .title_about_me::before {
+        content: '';
+        background-image: url('src/assets/about_me/sparkle_two.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 30px;
+        height: 30px;
+        display: inline-block;
+    }
+
+    .title_about_me::after {
+        content: '';
+        background-image: url('src/assets/about_me/sparkle_one.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 30px;
+        height: 30px;
+        display: inline-block;
+    }
+</style>
