--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/global.css";
+
 import "@fontsource/roboto-mono"
 import "@fontsource/courier-prime"
 import Header from '../components/Header.astro';
@@ -14,13 +16,45 @@ import AboutMe from "./Home/AboutMe.astro";
 
 <style is:global>
 	h1, a {
-		font-family: "Courier Prime";
+		font-family: "Montserrat";
 	}
 
 	html {
 		font-family: "Roboto Mono";
-		font-size: 16px;
+		font-size: 1rem;
 		color: #2A2A2A;
 	}
+
+	/* titles */
+	h1 {
+	font-size: 2.5rem; /* 40px */
+	font-weight: 700;
+	}
+
+	h2 {
+	font-size: 2rem; /* 32px */
+	font-weight: 600;
+	}
+
+	h3 {
+	font-size: 1.75rem; /* 28px */
+	font-weight: 600;
+	}
+
+	h4 {
+	font-size: 1.5rem; /* 24px */
+	font-weight: 500;
+	}
+
+	h5 {
+	font-size: 1.25rem; /* 20px */
+	font-weight: 500;
+	}
+
+	h6 {
+	font-size: 1.125rem; /* 18px */
+	font-weight: 500;
+	}
+
 
 </style>
