fix: fix configuration for icons

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import {Github} from "lucide-astro";
-import {Linkedin} from "lucide-astro";
-import {Mail} from "lucide-astro";
+import { Mail } from "@lucide/astro";
+import LinkedInIcon from '@mui/icons-material/LinkedIn';
+import GithubIcom from '@mui/icons-material/Github';
 ---
 
 <div class="text-lg flex flex-row items-center justify-between w-full p-5 right-0 left-0">
@@ -14,8 +14,8 @@ import {Mail} from "lucide-astro";
         <a href="" >My projects</a>
 
         <div class="flex flex-row items-center text-lg gap-5">
-            <a href="https://github.com/iKagnana"><Github/></a>
-            <a href="https://www.linkedin.com/in/kagnana-ith/"><Linkedin/></a>
+            <a href="https://github.com/iKagnana"><GithubIcom/></a>
+            <a href="https://www.linkedin.com/in/kagnana-ith/"><LinkedInIcon/></a>
             <a href="mailto:ikagnana@gmail.com" ><Mail/></a>
         </div>
 	</nav>
