--- a/src/pages/Home/Introduction.astro
+++ b/src/pages/Home/Introduction.astro
@@ -1,5 +1,5 @@
 ---
-import {MoveDown} from "lucide-astro";
+import {MoveDown} from "@lucide/astro";
 ---
 
 <div class="h-screen flex flex-row justify-around items-center">
