--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,5 @@
 ---
 import { Mail } from "@lucide/astro";
-import LinkedInIcon from '@mui/icons-material/LinkedIn';
-import GithubIcom from '@mui/icons-material/Github';
 ---
 
 <div class="text-lg flex flex-row items-center justify-between w-full p-5 right-0 left-0">
@@ -14,8 +12,8 @@ import GithubIcom from '@mui/icons-material/Github';
         <a href="" >My projects</a>
 
         <div class="flex flex-row items-center text-lg gap-5">
-            <a href="https://github.com/iKagnana"><GithubIcom/></a>
-            <a href="https://www.linkedin.com/in/kagnana-ith/"><LinkedInIcon/></a>
+            <a href="https://github.com/iKagnana"><img class="size-[1.5rem]" src="src/assets/icons/GithubIcon.svg"/></a>
+            <a href="https://www.linkedin.com/in/kagnana-ith/"><img class="size-[1.5rem]" src="src/assets/icons/LinkedinIcon.svg"/></a>
             <a href="mailto:ikagnana@gmail.com" ><Mail/></a>
         </div>
 	</nav>
